--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <modules>
         <module>foxc-eureka-server</module>
+        <module>foxc-data-tracert</module>
     </modules>
 
     <parent>
