--- a/foxc-eureka-server/src/main/resources/application.yml
+++ b/foxc-eureka-server/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
   security:
     user:
       name: foxc
-      password: foxc#ww
+      password: foxc_www
 
 logging:
   config: classpath:logback.xml
