--- a/foxc-data-tracert/src/main/resources/application-dev.yml
+++ b/foxc-data-tracert/src/main/resources/application-dev.yml
@@ -5,6 +5,8 @@ eureka:
     prefer-ip-address: true
     lease-renewal-interval-in-seconds: 2
     lease-expiration-duration-in-seconds: 10
+    metadata-map:
+      my-metadata: 我自定义的元数据
   client:
     serviceUrl:
-      defaultZone: http://foxc:foxc#ww@localhost:8801/eureka/
+      defaultZone: http://foxc:foxc_www@localhost:8801/eureka/
