--- a/foxc-eureka-server/src/main/resources/application-dev.yml
+++ b/foxc-eureka-server/src/main/resources/application-dev.yml
@@ -11,5 +11,5 @@ eureka:
     register-with-eureka: false
     fetch-registry: false
     serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+      defaultZone: http://${security.user.name}:${security.user.password}@${eureka.instance.hostname}:${server.port}/eureka/
   environment: @profiles.active@
