--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <commons-collections-version>3.2.2</commons-collections-version>
         <swagger.version>2.8.0</swagger.version>
         <validation-api-version>2.0.1.Final</validation-api-version>
+        <fastjson.version>1.2.62</fastjson.version>
     </properties>
 
     <dependencies>
@@ -79,6 +80,13 @@
                 <groupId>javax.validation</groupId>
                 <artifactId>validation-api</artifactId>
                 <version>${validation-api-version}</version>
+            </dependency>
+
+            <!-- JSON工具类 fastjson依赖 -->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>${fastjson.version}</version>
             </dependency>
 
         </dependencies>
