add foxc-consumer-movie-feign-customizing and foxc-provider-user-with-auth 2 modules

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,8 @@
         <module>foxc-question-survey</module>
         <module>foxc-provider-user</module>
         <module>foxc-consumer-movie</module>
+        <module>foxc-consumer-movie-feign-customizing</module>
+        <module>foxc-provider-user-with-auth</module>
     </modules>
 
     <parent>
