add foxc-consumer-movie-ribbon module

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>foxc-consumer-movie</module>
         <module>foxc-consumer-movie-feign-customizing</module>
         <module>foxc-provider-user-with-auth</module>
+        <module>foxc-consumer-movie-ribbon</module>
     </modules>
 
     <parent>
