--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>foxc-consumer-movie-feign-customizing</module>
         <module>foxc-provider-user-with-auth</module>
         <module>foxc-consumer-movie-ribbon</module>
+        <module>foxc-gateway</module>
     </modules>
 
     <parent>
