--- a/foxc-consumer-movie-ribbon/pom.xml
+++ b/foxc-consumer-movie-ribbon/pom.xml
@@ -50,6 +50,12 @@
             <artifactId>lombok</artifactId>
         </dependency>
 
+        <!-- JSON工具类 fastjson依赖 -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
+
     </dependencies>
 
 
