--- a/foxc-gateway/pom.xml
+++ b/foxc-gateway/pom.xml
@@ -36,6 +36,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
