--- a/foxc-zuul/src/main/resources/application.yml
+++ b/foxc-zuul/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8040
 spring:
   application:
-    name: foxc-gateway-zuul
+    name: foxc-zuul
 eureka:
   client:
     serviceUrl:
