--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,8 @@
         <module>foxc-consumer-movie-feign-customizing</module>
         <module>foxc-provider-user-with-auth</module>
         <module>foxc-consumer-movie-ribbon</module>
-        <module>foxc-gateway-zuul</module>
+        <module>foxc-zuul</module>
+        <module>foxc-gateway</module>
     </modules>
 
     <parent>
