--- a/foxc-provider-user/pom.xml
+++ b/foxc-provider-user/pom.xml
@@ -27,6 +27,11 @@
 
         <dependency>
             <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
             <!-- 默认情况下，Eureka Client 使用Jersey与 Eureka Server交互，排除Jersey相关依赖，基于RestTemplate的HTTP客户端 -->
             <exclusions>
