--- a/foxc-provider-user/src/main/resources/application.yml
+++ b/foxc-provider-user/src/main/resources/application.yml
@@ -1,10 +1,10 @@
-spring:
-  application:
-    name: foxc-provider-user
-  profiles:
-    active: @profiles.active@
-  jackson:
-    default-property-inclusion: non_null
-
-logging:
-  config: classpath:logback.xml
+#spring:
+##  application:
+##    name: foxc-provider-user
+#  profiles:
+#    active: @profiles.active@
+#  jackson:
+#    default-property-inclusion: non_null
+#
+#logging:
+#  config: classpath:logback.xml
